k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: dynatrace-demo
  labels:
    app.kubernetes.io/name: dynatrace-demo
