k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-demo
  namespace: dynatrace-demo
  labels:
    app: web-demo
spec:
  selector:
    app: web-demo
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
